# processamento-livros-projeto-gutenberg

./: .gitignore  CMakeLists.txt  README (2).md  README.md  config.h.in
include/: config.h  hash.h  list.h  metrics.h  processaLivro.h  sort.h
input/: book1.txt  book10.txt  book11.txt  book2.txt  book3.txt  book4.txt  book5.txt  book6.txt  book7.txt  book8.txt  book9.txt  input.txt
output/Hash/: 1hashSimpleLog.txt  2hashSimpleLog.txt  3hashSimpleLog.txt
output/Sort/: 1sort_results.txt  2sort_results.txt  3sort_results.txt
output/Sort/caso4/: 10book_words.txt  1book_words.txt  2book_words.txt  3book_words.txt  4book_words.txt  5book_words.txt  6book_words.txt  7book_words.txt  8book_words.txt  9book_words.txt  mostusedwords.txt
src/: hash.cpp  main.cpp  metrics.cpp  processaLivro.cpp
testes/: CMakeLists.txt  Test10books.cpp  TestSort.cpp  TestSwitchHashFunc.cpp
testes/hash/: CMakeLists.txt  hashTest1.cpp  hashTest2.cpp  hashTest3.cpp  hashTest4.cpp
testes/list/: CMakeLists.txt  listTest1.cpp  listTest2.cpp  listTest3.cpp  listTest4.cpp  listTest5.cpp  listTest6.cpp  listTest7.cpp
testes/livro/: CMakeLists.txt  livroTest1.cpp  livroTest2.cpp  livroTest3.cpp
