# Region Tests List
add_executable(listTest1 listTest1.cpp)
target_link_libraries(listTest1 PUBLIC libProcessaArquivos)

add_executable(listTest2 listTest2.cpp)
target_link_libraries(listTest2 PUBLIC libProcessaArquivos)

add_executable(listTest3 listTest3.cpp)
target_link_libraries(listTest3 PUBLIC libProcessaArquivos)

add_executable(listTest4 listTest4.cpp)
target_link_libraries(listTest4 PUBLIC libProcessaArquivos)

add_executable(listTest5 listTest5.cpp)
target_link_libraries(listTest5 PUBLIC libProcessaArquivos)

add_executable(listTest6 listTest6.cpp)
target_link_libraries(listTest6 PUBLIC libProcessaArquivos)

add_executable(listTest7 listTest7.cpp)
target_link_libraries(listTest7 PUBLIC libProcessaArquivos)





